; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_gui_x11.c_gui_init_menu_font.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_gui_x11.c_gui_init_menu_font.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i64, i32 }
%struct.TYPE_5__ = type { i8*, i32 }

@gui = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@vimShell = common dso_local global i32 0, align 4
@XtRString = common dso_local global i32 0, align 4
@XtRFontStruct = common dso_local global i32 0, align 4
@False = common dso_local global i64 0, align 8
@XtRFontSet = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gui_init_menu_font() #0 {
  %1 = alloca %struct.TYPE_5__, align 8
  %2 = alloca %struct.TYPE_5__, align 8
  %3 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @gui, i32 0, i32 1), align 8
  %4 = inttoptr i64 %3 to i8*
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 0
  store i8* %4, i8** %5, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  %8 = call i8* @strlen(i8* %7)
  %9 = ptrtoint i8* %8 to i32
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 1
  store i32 %9, i32* %10, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 0
  store i8* bitcast (%struct.TYPE_6__* @gui to i8*), i8** %11, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 1
  store i32 4, i32* %12, align 8
  %13 = load i32, i32* @vimShell, align 4
  %14 = load i32, i32* @XtRString, align 4
  %15 = load i32, i32* @XtRFontStruct, align 4
  %16 = call i64 @XtConvertAndStore(i32 %13, i32 %14, %struct.TYPE_5__* %1, i32 %15, %struct.TYPE_5__* %2)
  %17 = load i64, i64* @False, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %0
  br label %20

20:                                               ; preds = %19, %0
  ret void
}

declare dso_local i8* @strlen(i8*) #1

declare dso_local i64 @XtConvertAndStore(i32, i32, %struct.TYPE_5__*, i32, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
